--- a/exact/index6.html
+++ b/exact/index6.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
 <!-- Sidebar -->
 <nav class="sidebar">
     <div class="sidebar-brand">
-        <img src="assets/img/my-profile-img.jpg" alt="Profile">
+        <img src="../assets/img/my-profile-img.jpg" alt="Profile">
         <h4>Suhrob Kalandarov</h4>
 
         <div class="social-links-sidebar">
@@ -77,7 +77,7 @@
 
     <!-- Home Section -->
     <section id="home" class="hero-section dark-background" data-aos="fade-up" data-aos-delay="100">
-        <div style="background: url('assets/img/hero-bg.jpg') no-repeat center center/cover; width: 100%; height: 100vh;">
+        <div style="background: url('../assets/img/hero-bg.jpg') no-repeat center center/cover; width: 100%; height: 100vh;">
             <div class="hero-content">
                 <h1>Suhrob Kalandarov</h1>
                 <p class="typed-text">I'm <span class="typed" data-typed-items="Backend Developer, Frontend Developer, Freelancer, Designer"></span></p>
@@ -98,7 +98,7 @@
         <div class="container" data-aos="fade-up" data-aos-delay="100">
             <div class="row gy-4 justify-content-center">
                 <div class="col-lg-4">
-                    <img src="my-profile-img.jpg" class="img-fluid" alt="">
+                    <img src="../my-profile-img.jpg" class="img-fluid" alt="">
                 </div>
 
                 <div class="col-lg-8 content">
@@ -320,7 +320,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
-            <img src="H-logo.png" alt="Logo">
+            <img src="../H-logo.png" alt="Logo">
         </div>
         <p>123 Street, Anytown, USA 12345</p>
         <p>© 2025 Portfolio. All rights reserved</p>
@@ -330,6 +330,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-<script src="assets/js/main.js"></script>
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
