--- a/exact/index2.html
+++ b/exact/index2.html
@@ -255,7 +255,7 @@
     <div class="container">
         <h2 class="text-center mb-5">About Me</h2>
         <div class="about-content">
-            <img src="boy-profile-picture.webp" alt="About" class="about-img">
+            <img src="../boy-profile-picture.webp" alt="About" class="about-img">
             <div class="about-text">
                 <p>
                     I have 1 year of experience in developing Telegram bots and 1 year in backend development.
