--- a/exact/index3.html
+++ b/exact/index3.html
@@ -103,7 +103,7 @@
         /* Home section */
         .hero-section {
             height: 100vh;
-            background: url('img.png') no-repeat center center/cover;
+            background: url('../img.png') no-repeat center center/cover;
             position: relative;
         }
 
@@ -249,7 +249,7 @@
 <!-- Sidebar Navigation -->
 <nav class="sidebar">
     <div class="sidebar-brand">
-        <img src="my-profile-img.jpg" alt="Profile">
+        <img src="../my-profile-img.jpg" alt="Profile">
         <h4>Suhrob Kalandarov</h4>
         <div class="social-links-sidebar">
             <a href="mailto:suhrobqalandarov27@gmail.com">
@@ -329,7 +329,7 @@
                         <p><i class="fas fa-user-tie"></i>Freelance: Available</p>
                     </div>
                 </div>
-                <img src="my-profile-img.jpg" alt="About" class="about-img">
+                <img src="../my-profile-img.jpg" alt="About" class="about-img">
             </div>
         </div>
     </section>
@@ -338,7 +338,7 @@
     <footer id="contact">
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="H-logo.png" alt="Logo">
+                <img src="../H-logo.png" alt="Logo">
             </div>
             <div class="footer-info">
                 <p>123 Street, Anytown, USA 12345</p>
