--- a/exact/index4.html
+++ b/exact/index4.html
@@ -363,7 +363,7 @@
 <!-- Sidebar Navigation -->
 <nav class="sidebar">
     <div class="sidebar-brand">
-        <img src="my-profile-img.jpg" alt="Profile">
+        <img src="../my-profile-img.jpg" alt="Profile">
         <h4>Suhrob Kalandarov</h4>
         <div class="social-links-sidebar">
             <a href="mailto:suhrobqalandarov27@gmail.com">
@@ -445,7 +445,7 @@
                 <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.</p>
             </div>
             <div class="about-container">
-                <img src="my-profile-img.jpg" alt="About" class="about-img">
+                <img src="../my-profile-img.jpg" alt="About" class="about-img">
                 <div class="about-text">
                    <div>
                        <h3>FullStack Developer.</h3>
@@ -590,7 +590,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="H-logo.png" alt="Logo">
+                <img src="../H-logo.png" alt="Logo">
             </div>
             <div class="footer-info">
                 <p>123 Street, Anytown, USA 12345</p>
