--- a/exact/index5.html
+++ b/exact/index5.html
@@ -110,7 +110,7 @@
     /* Home Section */
     .hero-section {
       height: 100vh;
-      background: url('terraces.jpg') no-repeat center center/cover;
+      background: url('../terraces.jpg') no-repeat center center/cover;
       display: flex;
       align-items: center;
       justify-content: left;
@@ -315,7 +315,7 @@
 <!-- Sidebar -->
 <nav class="sidebar">
   <div class="sidebar-brand">
-    <img src="my-profile-img.jpg" alt="Profile">
+    <img src="../my-profile-img.jpg" alt="Profile">
     <h4>Suhrob Kalandarov</h4>
     <div class="social-links-sidebar">
       <a href="mailto:suhrobqalandarov27@gmail.com">
@@ -400,7 +400,7 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">
       <div class="row gy-4 justify-content-center">
         <div class="col-lg-4">
-          <img src="my-profile-img.jpg" class="img-fluid" alt="">
+          <img src="../my-profile-img.jpg" class="img-fluid" alt="">
         </div>
 
         <div class="col-lg-8 content">
@@ -758,7 +758,7 @@
                 <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
@@ -771,7 +771,7 @@
                 <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
@@ -784,7 +784,7 @@
                 <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
@@ -797,7 +797,7 @@
                 <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
             </div>
@@ -810,7 +810,7 @@
                 <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
                 <i class="bi bi-quote quote-icon-right"></i>
               </p>
-              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+              <img src="../assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
@@ -922,7 +922,7 @@
   <!-- Footer -->
   <footer data-aos="fade-up">
     <div class="footer-logo">
-      <img src="H-logo.png" alt="Logo">
+      <img src="../H-logo.png" alt="Logo">
     </div>
     <p>123 Street, Anytown, USA 12345</p>
     <p>© 2025 Portfolio. All rights reserved</p>
