--- a/exact/index.html
+++ b/exact/index.html
@@ -7,8 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
+    /* Asosiy stil */
     :root {
       --main-color: #2A2F4F;
       --secondary-color: #4B56D2;
@@ -17,10 +17,10 @@
     }
     body {
       font-family: 'Poppins', sans-serif;
-      background: #fff;
-      color: #000;
+      background: #fff; /* Orqa fon oq rangga o'zgartirildi */
+      color: #000; /* Matn rangi qora qilindi */
       overflow-x: hidden;
-      padding-top: 120px;
+      padding-top: 120px; /* Navbar uchun joy */
     }
     .navbar {
       background: rgba(0, 0, 0, 0.7);
@@ -61,20 +61,23 @@
       text-align: center;
       position: relative;
       overflow: hidden;
-      background: url('img.png') no-repeat center center/cover;
     }
-    .hero-content {
-      text-align: left;
-      margin-left: 10%;
+    .animated-text {
+      font-size: 1.5rem;
+      margin-top: 20px;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px 20px;
+      border-radius: 15px;
+      display: inline-block;
+      border: 2px solid var(--accent-color);
     }
-    .hero-content h1 {
-      font-size: 4rem;
-      color: var(--main-color);
+    .animated-text span {
+      display: inline-block;
+      opacity: 0;
+      animation: fadeInUp 0.5s ease forwards;
     }
-    .typed-text {
-      font-size: 2rem;
-      color: var(--accent-color);
-    }
+    .animated-text span:nth-child(1) { animation-delay: 1s; }
+    .animated-text span:nth-child(2) { animation-delay: 2s; }
     .background-shapes {
       position: absolute;
       top: 0;
@@ -167,47 +170,13 @@
     .about-details p {
       margin: 0;
     }
-    .section-title {
-      text-align: center;
-      margin-bottom: 50px;
+    @keyframes fadeInDown {
+      0% { opacity: 0; transform: translateY(-50px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
-    .section-title h2 {
-      font-size: 2.5rem;
-      color: var(--main-color);
-    }
-    .section-title p {
-      font-size: 1.2rem;
-      color: #666;
-    }
-    .content {
-      margin-left: 20px;
-    }
-    .content h2 {
-      font-size: 2rem;
-      color: var(--main-color);
-    }
-    .content p {
-      font-size: 1rem;
-      color: #666;
-    }
-    .content ul {
-      list-style: none;
-      padding: 0;
-    }
-    .content ul li {
-      margin-bottom: 10px;
-    }
-    .content ul li i {
-      margin-right: 10px;
-      color: var(--accent-color);
-    }
-    .skills-section {
-      display: flex;
-      justify-content: space-between;
-      gap: 20px;
-    }
-    .skills-left, .skills-right {
-      flex: 1;
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -259,48 +228,36 @@
   <div class="background-shapes" id="shapesContainer"></div>
   <div class="hero-content">
     <h1>Suhrob Kalandarov</h1>
-    <p class="typed-text">I'm <span class="typed" data-typed-items="Backend Developer, Frontend Developer, Freelancer, Designer"></span></p>
+    <div class="animated-text">
+      <span>Java Backend</span> |
+      <span>Simple Frontend</span>
+    </div>
   </div>
 </section>
 
 <!-- About Section -->
-<section id="about" class="about section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>About</h2>
-    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-  </div>
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="row gy-4 justify-content-center">
-      <div class="col-lg-4">
-        <img src="about.jpg" class="img-fluid" alt="">
-      </div>
-      <div class="col-lg-8 content">
-        <h2>FullStack Developer</h2>
-        <p class="fst-italic py-3">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+<section id="about" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-5">About Me</h2>
+    <div class="about-section">
+      <img src="about.jpg" alt="About" class="about-img">
+      <div class="about-text">
+        <h3>FullStack Developer</h3>
+        <p>
+          Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem.
+          Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
+          Quia fugiat sit in iste officiis commodi quidem hic quas.
         </p>
-        <div class="row">
-          <div class="col-lg-6">
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-            </ul>
-          </div>
+        <div class="about-details">
+          <p><strong>Birthday:</strong> 1 May 1995</p>
+          <p><strong>Age:</strong> 30</p>
+          <p><strong>Website:</strong> www.example.com</p>
+          <p><strong>Degree:</strong> Master</p>
+          <p><strong>Phone:</strong> +123 456 7890</p>
+          <p><strong>Email:</strong> email@example.com</p>
+          <p><strong>City:</strong> New York, USA</p>
+          <p><strong>Freelance:</strong> Available</p>
         </div>
-        <p class="py-3">
-          Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-          Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-        </p>
       </div>
     </div>
   </div>
@@ -310,36 +267,20 @@
 <section id="skills" class="py-5">
   <div class="container">
     <h2 class="text-center mb-5">Skills</h2>
-    <div class="skills-section">
-      <div class="skills-left">
-        <div class="skill-card text-center">
-          <h4>Java</h4>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
-          </div>
-        </div>
-        <div class="skill-card text-center">
-          <h4>DataBase/Postgres</h4>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-          </div>
-        </div>
-        <div class="skill-card text-center">
-          <h4>Telegram Bots</h4>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
-          </div>
-        </div>
-      </div>
-      <div class="skills-right">
+    <div class="row">
+      <div class="col-md-4">
         <div class="skill-card text-center">
           <h4>Spring Boot</h4>
           <p>Building robust and scalable web applications using Spring Boot framework.</p>
         </div>
+      </div>
+      <div class="col-md-4">
         <div class="skill-card text-center">
           <h4>Hibernate</h4>
           <p>ORM tool for managing relational data in Java applications.</p>
         </div>
+      </div>
+      <div class="col-md-4">
         <div class="skill-card text-center">
           <h4>REST APIs</h4>
           <p>Designing and implementing RESTful web services for client-server communication.</p>
@@ -410,16 +351,8 @@
 
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 <script>
-  AOS.init();
-  const typed = new Typed('.typed', {
-    strings: ['Backend Developer', 'Frontend Developer', 'Freelancer', 'Designer'],
-    typeSpeed: 100,
-    backSpeed: 50,
-    loop: true
-  });
+  // Suzib yuruvchi animatsiya
   const shapesContainer = document.getElementById('shapesContainer');
   for (let i = 0; i < 30; i++) {
     const bubble = document.createElement('div');
