--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <!-- Sidebar -->
 <nav class="sidebar">
-    <div class="sidebar-brand">
+    <!--<div class="sidebar-brand">
         <img src="assets/img/my-profile-img.jpg" alt="Profile">
         <h4>Suhrob Kalandarov</h4>
 
@@ -24,9 +24,9 @@
             <a href="https://t.me/SuhrobKalandarov" target="_blank">
                 <i class="fab fa-telegram"></i>
             </a>
-           <!-- <a href="https://leetcode.com/u/suhrob_kalandarov" target="_blank">
+           &lt;!&ndash; <a href="https://leetcode.com/u/suhrob_kalandarov" target="_blank">
                 <i class="fas fa-code"></i>
-            </a>-->
+            </a>&ndash;&gt;
             <a href="https://linkedin.com/in/suhrob-qalandarov-4a20b5293" target="_blank">
                 <i class="fab fa-linkedin"></i>
             </a>
@@ -37,39 +37,37 @@
                 <i class="fab fa-github"></i>
             </a>
         </div>
-    </div>
+    </div>-->
     <ul class="nav-menu">
         <li class="nav-item">
             <a href="#home" class="nav-link">
                 <i class="fas fa-home"></i>
-                Home
             </a>
         </li>
         <li class="nav-item">
             <a href="#about" class="nav-link">
                 <i class="fas fa-user"></i>
-                About
             </a>
         </li>
         <li class="nav-item">
             <a href="#skills" class="nav-link">
                 <i class="fas fa-code"></i>
-                Skills
             </a>
         </li>
         <li class="nav-item">
             <a href="#contact" class="nav-link">
                 <i class="fas fa-envelope"></i>
-                Contact
             </a>
         </li>
     </ul>
 </nav>
 
-<!-- Mobile Menu Toggle -->
+<!--
+ Mobile Menu Toggle
 <button class="menu-toggle d-lg-none">
     <i class="fas fa-bars"></i>
 </button>
+-->
 
 <!-- Main Content -->
 <main class="main-content">
