Add initial portfolio HTML structure and styles
Includes a responsive design with support for dark mode, animations, and various sections such as Hero, About, Skills, Experience, Education, and Projects. Custom styles for typography, layout, and interactive elements are included.

--- a/index0.html
+++ b/index0.html
@@ -1930,11 +1930,11 @@
 </head>
 <body>
 <!-- Loading Screen -->
-<div class="loading-screen">
+<!--<div class="loading-screen">
     <div class="loader">
         <div class="loader-text">Loading...</div>
     </div>
-</div>
+</div>-->
 
 <!-- Theme Toggle -->
 <div class="theme-toggle">
@@ -2375,7 +2375,34 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="testimonial-item" data-index="3">
+                        <div class="testimonial-text">
+                            Suhrob's technical expertise and innovative thinking have been instrumental to our team's success. He approaches complex challenges with a clear methodology and delivers solutions that exceed expectations. His ability to quickly adapt to new technologies and share knowledge with the team has elevated our entire development process.
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar">
+                                <img src="/placeholder.svg?height=70&width=70" alt="Dilshod Rakhimov">
+                            </div>
+                            <div class="testimonial-info">
+                                <h4>Dilshod Rakhimov</h4>
+                                <p>Senior Developer at CodeCraft</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="testimonial-item" data-index="4">
+                        <div class="testimonial-text">
+                            I've had the pleasure of collaborating with Suhrob on several projects, and his dedication to quality and user experience is unmatched. He brings a unique perspective that combines technical excellence with a deep understanding of business needs. His positive attitude and willingness to mentor junior developers have made him an essential part of our development community.
+                        </div>
+                        <div class="testimonial-author">
+                            <div class="testimonial-avatar">
+                                <img src="/placeholder.svg?height=70&width=70" alt="Kamola Azimova">
+                            </div>
+                            <div class="testimonial-info">
+                                <h4>Kamola Azimova</h4>
+                                <p>UX Director at DigitalSphere</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="testimonial-controls">
                     <div class="testimonial-control prev">
@@ -2722,6 +2749,7 @@
         activeStatement = (activeStatement + 1) % statements.length;
         setTimeout(animateStatements, 4000);
     }
+
     animateStatements();
 
     // Testimonial Slider
