--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p class="hero-description" data-aos="fade-up" data-aos-delay="600">I'm <span id="typed-text"></span></p>
   </div>
   <div class="scroll-down">
-    <span>Explore More</span>
+    <span>Scroll Down</span>
     <i class="fas fa-chevron-down"></i>
   </div>
 </section>
@@ -550,7 +550,7 @@
   <div class="container">
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="placeholder.svg" alt="Logo">
+        <img src="/placeholder.svg?height=50&width=50" alt="Logo">
       </div>
       <div class="footer-social">
         <a href="mailto:suhrobqalandarov27@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -570,6 +570,420 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="scripts.js"></script>
+<script>
+  // Loading Screen
+  window.addEventListener('load', function() {
+    setTimeout(function() {
+      document.querySelector('.loading-screen').classList.add('hidden');
+    }, 1500);
+  });
+
+  // Theme Toggle
+  const themeToggle = document.querySelector('.theme-toggle');
+  const body = document.querySelector('body');
+  const icon = themeToggle.querySelector('i');
+
+  // Check for saved theme preference
+  if (localStorage.getItem('theme') === 'dark') {
+    body.classList.add('dark-mode');
+    icon.classList.remove('fa-moon');
+    icon.classList.add('fa-sun');
+  }
+
+  themeToggle.addEventListener('click', function() {
+    body.classList.toggle('dark-mode');
+
+    if (body.classList.contains('dark-mode')) {
+      icon.classList.remove('fa-moon');
+      icon.classList.add('fa-sun');
+      localStorage.setItem('theme', 'dark');
+    } else {
+      icon.classList.remove('fa-sun');
+      icon.classList.add('fa-moon');
+      localStorage.setItem('theme', 'light');
+    }
+  });
+
+  // Initialize AOS
+  AOS.init({
+    duration: 800,
+    easing: 'ease-in-out',
+    once: true,
+    mirror: false
+  });
+
+  // Canvas Background Animation
+  const canvas = document.getElementById('canvas');
+  const ctx = canvas.getContext('2d');
+
+  let width = canvas.width = window.innerWidth;
+  let height = canvas.height = window.innerHeight;
+
+  const pointCount = 150;
+  const maxDistance = 180;
+  const points = [];
+
+  // Create random points
+  for (let i = 0; i < pointCount; i++) {
+    points.push(createRandomPoint());
+  }
+
+  function createRandomPoint(x = Math.random() * width, y = Math.random() * height) {
+    return {
+      x,
+      y,
+      vx: (Math.random() - 0.5) * 1.5,
+      vy: (Math.random() - 0.5) * 1.5,
+      size: Math.random() * 2 + 1,
+      color: `rgba(${Math.floor(Math.random() * 100 + 155)}, ${Math.floor(Math.random() * 100 + 155)}, ${Math.floor(Math.random() * 100 + 155)}, 0.7)`
+    };
+  }
+
+  function draw() {
+    ctx.clearRect(0, 0, width, height);
+
+    // Draw lines between points
+    for (let i = 0; i < points.length; i++) {
+      for (let j = i + 1; j < points.length; j++) {
+        const dx = points[i].x - points[j].x;
+        const dy = points[i].y - points[j].y;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (distance < maxDistance) {
+          ctx.strokeStyle = `rgba(255, 255, 255, ${(1 - distance / maxDistance).toFixed(2)})`;
+          ctx.lineWidth = 0.5;
+          ctx.beginPath();
+          ctx.moveTo(points[i].x, points[i].y);
+          ctx.lineTo(points[j].x, points[j].y);
+          ctx.stroke();
+        }
+      }
+    }
+
+    // Move and draw points
+    for (let i = 0; i < points.length; i++) {
+      const p = points[i];
+      p.x += p.vx;
+      p.y += p.vy;
+
+      // Bounce off walls
+      if (p.x <= 0 || p.x >= width) p.vx *= -1;
+      if (p.y <= 0 || p.y >= height) p.vy *= -1;
+
+      // Draw point
+      ctx.fillStyle = p.color;
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2);
+      ctx.fill();
+    }
+
+    requestAnimationFrame(draw);
+  }
+
+  draw();
+
+  // Add point on click/touch
+  function addPoint(e) {
+    const rect = canvas.getBoundingClientRect();
+    const x = e.clientX || (e.touches && e.touches[0].clientX);
+    const y = e.clientY || (e.touches && e.touches[0].clientY);
+    if (x && y) {
+      for (let i = 0; i < 5; i++) {
+        points.push(createRandomPoint(x - rect.left, y - rect.top));
+      }
+    }
+  }
+
+  canvas.addEventListener('mousedown', addPoint);
+  canvas.addEventListener('touchstart', addPoint);
+
+  // Resize canvas on window resize
+  window.addEventListener('resize', () => {
+    width = canvas.width = window.innerWidth;
+    height = canvas.height = window.innerHeight;
+  });
+
+  // Interactive Text Animation
+  const interactiveText = document.querySelector('.interactive-text');
+  const text = interactiveText.textContent;
+  interactiveText.textContent = '';
+
+  // Split text into individual spans
+  for (let i = 0; i < text.length; i++) {
+    const span = document.createElement('span');
+    span.textContent = text[i];
+    interactiveText.appendChild(span);
+  }
+
+  const letters = interactiveText.querySelectorAll('span');
+
+  interactiveText.addEventListener('mousemove', (e) => {
+    const bounds = interactiveText.getBoundingClientRect();
+    const mouseX = e.clientX - bounds.left;
+    const mouseY = e.clientY - bounds.top;
+
+    letters.forEach((letter, index) => {
+      const letterBounds = letter.getBoundingClientRect();
+      const letterX = letterBounds.left - bounds.left + letterBounds.width / 2;
+      const letterY = letterBounds.top - bounds.top + letterBounds.height / 2;
+
+      const distX = mouseX - letterX;
+      const distY = mouseY - letterY;
+      const distance = Math.sqrt(distX * distX + distY * distY);
+
+      const maxDistance = 100;
+      if (distance < maxDistance) {
+        const force = (1 - distance / maxDistance) * 20;
+        const moveX = (distX / distance) * force;
+        const moveY = (distY / distance) * force;
+        letter.style.transform = `translate(${-moveX}px, ${-moveY}px)`;
+      } else {
+        letter.style.transform = 'translate(0, 0)';
+      }
+    });
+  });
+
+  interactiveText.addEventListener('mouseleave', () => {
+    letters.forEach(letter => {
+      letter.style.transform = 'translate(0, 0)';
+    });
+  });
+
+  // Typed Text Animation
+  const typedTextElement = document.getElementById('typed-text');
+  const textArray = ['Backend Developer', 'Frontend Developer', 'Freelancer', 'Designer', 'Problem Solver'];
+  let textIndex = 0;
+  let charIndex = 0;
+  let isDeleting = false;
+  let typingSpeed = 100;
+
+  function typeText() {
+    const currentText = textArray[textIndex];
+
+    if (isDeleting) {
+      typedTextElement.textContent = currentText.substring(0, charIndex - 1);
+      charIndex--;
+      typingSpeed = 50;
+    } else {
+      typedTextElement.textContent = currentText.substring(0, charIndex + 1);
+      charIndex++;
+      typingSpeed = 100;
+    }
+
+    if (!isDeleting && charIndex === currentText.length) {
+      isDeleting = true;
+      typingSpeed = 1500; // Pause at end
+    } else if (isDeleting && charIndex === 0) {
+      isDeleting = false;
+      textIndex = (textIndex + 1) % textArray.length;
+      typingSpeed = 500; // Pause before typing next
+    }
+
+    setTimeout(typeText, typingSpeed);
+  }
+
+  typeText();
+
+  // Scroll Animations
+  const statements = document.querySelectorAll('.statement');
+  let activeStatement = 0;
+
+  function animateStatements() {
+    statements.forEach((statement, index) => {
+      statement.classList.remove('visible', 'exit');
+      if (index === activeStatement) {
+        statement.classList.add('visible');
+      } else if (index === (activeStatement - 1 + statements.length) % statements.length) {
+        statement.classList.add('exit');
+      }
+    });
+
+    activeStatement = (activeStatement + 1) % statements.length;
+    setTimeout(animateStatements, 4000);
+  }
+  animateStatements();
+
+  // Testimonial Slider
+  const testimonialItems = document.querySelectorAll('.testimonial-item');
+  const testimonialDots = document.querySelectorAll('.testimonial-dot');
+  const prevBtn = document.querySelector('.testimonial-control.prev');
+  const nextBtn = document.querySelector('.testimonial-control.next');
+  let currentSlide = 0;
+  let totalSlides = testimonialItems.length;
+
+  function updateTestimonialClasses() {
+    testimonialItems.forEach((item, index) => {
+      item.classList.remove('active', 'prev', 'next');
+
+      if (index === currentSlide) {
+        item.classList.add('active');
+      } else if (index === (currentSlide - 1 + totalSlides) % totalSlides) {
+        item.classList.add('prev');
+      } else if (index === (currentSlide + 1) % totalSlides) {
+        item.classList.add('next');
+      }
+    });
+
+    testimonialDots.forEach((dot, index) => {
+      dot.classList.toggle('active', index === currentSlide);
+    });
+  }
+
+  function goToSlide(index) {
+    if (index < 0) index = totalSlides - 1;
+    if (index >= totalSlides) index = 0;
+
+    // Add flip animation to the current active slide
+    const activeSlide = document.querySelector('.testimonial-item.active');
+    if (activeSlide) {
+      activeSlide.style.animation = 'flipCard 0.5s ease-in-out';
+
+      setTimeout(() => {
+        activeSlide.style.animation = '';
+        currentSlide = index;
+        updateTestimonialClasses();
+      }, 250);
+    } else {
+      currentSlide = index;
+      updateTestimonialClasses();
+    }
+  }
+
+  // Initialize testimonials
+  updateTestimonialClasses();
+
+  // Event listeners for testimonial controls
+  prevBtn.addEventListener('click', () => goToSlide(currentSlide - 1));
+  nextBtn.addEventListener('click', () => goToSlide(currentSlide + 1));
+
+  testimonialDots.forEach((dot, i) => {
+    dot.addEventListener('click', () => goToSlide(i));
+  });
+
+  // Auto slide for testimonials
+  let testimonialInterval = setInterval(() => goToSlide(currentSlide + 1), 5000);
+
+  document.querySelector('.testimonial-slider').addEventListener('mouseenter', () => {
+    clearInterval(testimonialInterval);
+  });
+
+  document.querySelector('.testimonial-slider').addEventListener('mouseleave', () => {
+    testimonialInterval = setInterval(() => goToSlide(currentSlide + 1), 5000);
+  });
+
+  // Profile Card Animations
+  const profileCards = document.querySelectorAll('.profile-card');
+
+  profileCards.forEach(card => {
+    card.addEventListener('mouseenter', () => {
+      card.classList.add('animate');
+      setTimeout(() => {
+        card.classList.remove('animate');
+      }, 800);
+    });
+  });
+
+  // Navbar Scroll Effect
+  const navbar = document.querySelector('.navbar');
+  const navLinks = document.querySelector('.nav-links');
+  const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+
+  window.addEventListener('scroll', () => {
+    if (window.scrollY > 50) {
+      navbar.classList.add('scrolled');
+    } else {
+      navbar.classList.remove('scrolled');
+    }
+  });
+
+  mobileMenuBtn.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+    mobileMenuBtn.innerHTML = navLinks.classList.contains('active') ?
+            '<i class="fas fa-times"></i>' : '<i class="fas fa-bars"></i>';
+  });
+
+  // Close mobile menu when clicking a link
+  document.querySelectorAll('.nav-links a').forEach(link => {
+    link.addEventListener('click', () => {
+      navLinks.classList.remove('active');
+      mobileMenuBtn.innerHTML = '<i class="fas fa-bars"></i>';
+    });
+  });
+
+  // Smooth scroll for anchor links
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function(e) {
+      e.preventDefault();
+
+      const targetId = this.getAttribute('href');
+      const targetElement = document.querySelector(targetId);
+
+      if (targetElement) {
+        const navbarHeight = document.querySelector('.navbar').offsetHeight;
+        const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - navbarHeight;
+
+        window.scrollTo({
+          top: targetPosition,
+          behavior: 'smooth'
+        });
+      }
+    });
+  });
+
+  // Admin login check
+  const contactForm = document.getElementById('contactForm');
+
+  contactForm.addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    const name = document.getElementById('name').value;
+    const email = document.getElementById('email').value;
+    const subject = document.getElementById('subject').value;
+    const message = document.getElementById('message').value;
+
+    // Check for admin credentials
+    if (name === 'admin' && email === 'admin@gmail.com' && subject === "i'm admin" && message === "i'm login admin page") {
+      // Redirect to admin page
+      window.location.href = '/admin';
+      return;
+    }
+
+    // Regular form submission
+    const submitBtn = this.querySelector('.submit-btn');
+    const originalText = submitBtn.innerHTML;
+
+    submitBtn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Sending...';
+    submitBtn.disabled = true;
+
+    // Simulate form submission
+    setTimeout(() => {
+      submitBtn.innerHTML = '<i class="fas fa-check"></i> Message Sent!';
+      submitBtn.style.backgroundColor = '#28a745';
+
+      // Reset form
+      this.reset();
+
+      // Reset button after 3 seconds
+      setTimeout(() => {
+        submitBtn.innerHTML = originalText;
+        submitBtn.disabled = false;
+        submitBtn.style.backgroundColor = '';
+      }, 3000);
+    }, 2000);
+  });
+
+  // Parallax effect for sections
+  window.addEventListener('scroll', function() {
+    const scrollPosition = window.pageYOffset;
+
+    document.querySelectorAll('.section-bg-dots').forEach(bg => {
+      const parent = bg.parentElement;
+      const parentTop = parent.offsetTop;
+      const speed = 0.5;
+
+      bg.style.transform = `translateY(${(scrollPosition - parentTop) * speed}px)`;
+    });
+  });
+</script>
 </body>
 </html>
