Add dynamic animations and styling to experience section
Introduced AOS-based animations and event-driven interactions for the experience cards, skill tags, and titles. Added styling enhancements in CSS for dark mode, responsive design, and hover effects. Updated experience.html to integrate new JavaScript and CSS files.

--- a/home/experience.html
+++ b/home/experience.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/study.css">
 </head>
 <body class="page-transition page-bottom">
 <!-- Loading Screen -->
@@ -36,7 +37,7 @@
         </div>
         <div class="experience-timeline">
             <!-- PDP ACADEMY Card (Present) -->
-            <div class="experience-card" data-aos="fade-up">
+            <div class="experience-card pdp-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
@@ -44,11 +45,19 @@
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
-                    <div class="experience-date">June 2024 - November 2025 (Present)</div>
+                    <div class="experience-date">
+                        <i class="far fa-calendar-alt"></i> June 2024 - November 2025 (Present)
+                    </div>
                     <div class="experience-role">Backend Development</div>
                     <p class="experience-description">
                         Learning Java from 0 to 100, backend technologies, and solving logical problems using C++ core concepts. The program provides comprehensive training in software development with a focus on backend technologies and practical applications.
                     </p>
+                    <div class="experience-skills">
+                        <span>Java</span>
+                        <span>Spring Boot</span>
+                        <span>Hibernate</span>
+                        <span>PostgreSQL</span>
+                    </div>
                 </div>
                 <div class="experience-image">
                     <img src="https://via.placeholder.com/800x600/2e7d32/ffffff?text=Tashkent+City" alt="Tashkent City">
@@ -56,7 +65,7 @@
             </div>
 
             <!-- ITPU Card -->
-            <div class="experience-card" data-aos="fade-up">
+            <div class="experience-card itpu-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
@@ -64,11 +73,19 @@
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
-                    <div class="experience-date">June 2023 - November 2024</div>
+                    <div class="experience-date">
+                        <i class="far fa-calendar-alt"></i> June 2023 - November 2024
+                    </div>
                     <div class="experience-role">Software Development</div>
                     <p class="experience-description">
                         Learned basic Java programming and web development fundamentals. The curriculum covered essential programming concepts, object-oriented design principles, and introductory web technologies to build a strong foundation in software development.
                     </p>
+                    <div class="experience-skills">
+                        <span>Java</span>
+                        <span>HTML/CSS</span>
+                        <span>JavaScript</span>
+                        <span>OOP</span>
+                    </div>
                 </div>
                 <div class="experience-image">
                     <img src="https://via.placeholder.com/800x600/1976d2/ffffff?text=Samarkand+City" alt="Samarkand City">
@@ -76,7 +93,7 @@
             </div>
 
             <!-- PROMAX LLC Card -->
-            <div class="experience-card" data-aos="fade-up">
+            <div class="experience-card promax-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
@@ -84,11 +101,19 @@
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
-                    <div class="experience-date">June 2022 - November 2023</div>
+                    <div class="experience-date">
+                        <i class="far fa-calendar-alt"></i> June 2022 - November 2023
+                    </div>
                     <div class="experience-role">Math, English</div>
                     <p class="experience-description">
                         Studied mathematics and English language skills. The program focused on developing strong analytical thinking through mathematics and effective communication skills through English language studies, providing a solid foundation for future technical education.
                     </p>
+                    <div class="experience-skills">
+                        <span>Mathematics</span>
+                        <span>English</span>
+                        <span>Analytical Thinking</span>
+                        <span>Communication</span>
+                    </div>
                 </div>
                 <div class="experience-image">
                     <img src="https://via.placeholder.com/800x600/1a237e/ffffff?text=Bukhara+City" alt="Bukhara City">
@@ -105,5 +130,6 @@
 <script src="/assets/js/scripts.js"></script>
 <script src="/assets/js/fragments/navbar.js"></script>
 <script src="/assets/js/fragments/footer.js"></script>
+<script src="/assets/js/study.js"></script>
 </body>
 </html>
