Update experience section image references and reorganize assets
Replaced placeholder URLs with proper image references for the experience section, ensuring accurate logos and building images for PDP Academy, ITPU, and PROMAX LLC. Additionally, reorganized asset files by renaming and moving them to an "ext" subdirectory for better project structure and management.

--- a/home/experience.html
+++ b/home/experience.html
@@ -41,7 +41,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80/2e7d32/ffffff?text=PDP" alt="PDP ACADEMY Logo">
+                            <img src="/assets/img/pdpa-logo.jpeg" alt="PDP ACADEMY Logo">
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/800x600/2e7d32/ffffff?text=Tashkent+City" alt="Tashkent City">
+                    <img src="/assets/img/pdpa-building.jpeg" alt="PDP Academy building">
                 </div>
             </div>
 
@@ -69,7 +69,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80/1976d2/ffffff?text=ITPU" alt="ITPU Logo">
+                            <img src="/assets/img/itpu-logo.png" alt="ITPU Logo">
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/800x600/1976d2/ffffff?text=Samarkand+City" alt="Samarkand City">
+                    <img src="/assets/img/itpu-building.jpeg" alt="ITPU building">
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80/1a237e/ffffff?text=PROMAX" alt="PROMAX LLC Logo">
+                            <img src="/assets/img/promax-logo.jpg" alt="PROMAX LLC Logo">
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/800x600/1a237e/ffffff?text=Bukhara+City" alt="Bukhara City">
+                    <img src="/assets/img/promax-building.jpg" alt="PROMAX LLC building">
                 </div>
             </div>
         </div>
