Add contact form functionality and enhance page-specific styling
Implemented dynamic contact form handling with simple validation, loading spinner, and notifications. Added new CSS for contact and skills pages along with adjustments to enhance page-specific layouts and improve responsiveness.

--- a/home/contact.html
+++ b/home/contact.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/pages/contact.css">
+    <link rel="stylesheet" href="/assets/css/components/notifications.css">
 </head>
 <body class="page-transition page-left">
 <!-- Loading Screen -->
@@ -103,5 +105,6 @@
 <script src="/assets/js/scripts.js"></script>
 <script src="/assets/js/fragments/navbar.js"></script>
 <script src="/assets/js/fragments/footer.js"></script>
+<script src="/assets/js/contact.js"></script>
 </body>
 </html>
