--- a/home/profiles.html
+++ b/home/profiles.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/pages/profiles.css">
 </head>
 <body class="page-transition page-right">
 <!-- Loading Screen -->
@@ -93,4 +94,3 @@
 <script src="/assets/js/fragments/footer.js"></script>
 </body>
 </html>
-
