--- a/home/projects.html
+++ b/home/projects.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/pages/projects.css">
 </head>
 <body class="page-transition page-top">
 <!-- Loading Screen -->
