--- a/home/skills.html
+++ b/home/skills.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/pages/skills.css">
 </head>
 <body class="page-transition page-left">
 <!-- Loading Screen -->
