Update theme toggle position and reorganize experience sections
Moved the theme toggle button to the top of the page for better visibility. Renamed "Work Experience" to "Study Experience" and added a placeholder section for future "Work Experience" content.

--- a/home/experience.html
+++ b/home/experience.html
@@ -33,7 +33,7 @@
     <div class="section-bg-dots"></div>
     <div class="container">
         <div class="section-title" data-aos="fade-up">
-            <h2>Work Experience</h2>
+            <h2>Study Experience</h2>
         </div>
         <div class="experience-timeline">
             <!-- PDP ACADEMY Card (Present) -->
@@ -119,6 +119,10 @@
                     <img src="/assets/img/promax-building.jpg" alt="PROMAX LLC building">
                 </div>
             </div>
+        </div>
+        <div class="section-title" data-aos="fade-up">
+            <h2>Work Experience</h2>
+            <p>Coming soon ...</p>
         </div>
     </div>
 </section>
