--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
   <link rel="stylesheet" href="/assets/css/fragments/footer.css">
-  <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body>
-
 <!-- Loading Screen -->
 <div class="loading-screen">
   <div class="loader">
+    <div class="loader-text">Loading...</div>
   </div>
 </div>
 
@@ -261,6 +260,5 @@
 <script src="/assets/js/scripts.js"></script>
 <script src="/assets/js/fragments/navbar.js"></script>
 <script src="/assets/js/fragments/footer.js"></script>
-<script src="/assets/js/loading-animation.js"></script>
 </body>
 </html>
