Add advanced page transition animations with loader updates
Replaced particle effects with hexagon-based animations for the loading screen. Introduced 3D cube loader, progress bar, and page-specific loading text for enhanced user experience. Updated styles and scripts to support responsive layouts and smooth page transitions.

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
   <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+  <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body>
+
 <!-- Loading Screen -->
 <div class="loading-screen">
   <div class="loader">
-    <div class="loader-text">Loading...</div>
   </div>
 </div>
 
@@ -260,5 +261,6 @@
 <script src="/assets/js/scripts.js"></script>
 <script src="/assets/js/fragments/navbar.js"></script>
 <script src="/assets/js/fragments/footer.js"></script>
+<script src="/assets/js/loading-animation.js"></script>
 </body>
 </html>
