--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
   <link rel="stylesheet" href="/assets/css/fragments/footer.css">
-  <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body>
-
 <!-- Loading Screen -->
 <div class="loading-screen">
-  <div class="loader">
-  </div>
+  <!-- The loading-animation.js will populate this -->
 </div>
 
 <!-- Theme Toggle -->
