--- a/home/experience.html
+++ b/home/experience.html
@@ -7,17 +7,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
-    <link rel="stylesheet" href="/assets/css/fragments/footer.css">
-    <link rel="stylesheet" href="/assets/css/study.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="study.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body class="page-transition page-bottom">
 <!-- Loading Screen -->
 <div class="loading-screen">
-    <div class="loader">
-        <div class="loader-text">Loading...</div>
-    </div>
+    <!-- The loading-animation.js will populate this -->
 </div>
 
 <!-- Theme Toggle -->
@@ -33,96 +32,68 @@
     <div class="section-bg-dots"></div>
     <div class="container">
         <div class="section-title" data-aos="fade-up">
-            <h2>Study Experience</h2>
+            <h2>Work Experience</h2>
         </div>
         <div class="experience-timeline">
             <!-- PDP ACADEMY Card (Present) -->
-            <div class="experience-card pdp-card" data-aos="fade-up">
+            <div class="experience-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/pdpa-logo.jpeg" alt="PDP ACADEMY Logo">
+                            <img src="placeholder.svg" alt="PDP ACADEMY Logo">
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
-                    <div class="experience-date">
-                        <i class="far fa-calendar-alt"></i> June 2024 - November 2025 (Present)
-                    </div>
+                    <div class="experience-date">June 2024 - November 2025 (Present)</div>
                     <div class="experience-role">Backend Development</div>
                     <p class="experience-description">
                         Learning Java from 0 to 100, backend technologies, and solving logical problems using C++ core concepts. The program provides comprehensive training in software development with a focus on backend technologies and practical applications.
                     </p>
-                    <div class="experience-skills">
-                        <span>Java</span>
-                        <span>Spring Boot</span>
-                        <span>Hibernate</span>
-                        <span>PostgreSQL</span>
-                    </div>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/pdpa-building.jpeg" alt="PDP Academy building">
+                    <img src="placeholder.svg" alt="Tashkent City">
                 </div>
             </div>
 
             <!-- ITPU Card -->
-            <div class="experience-card itpu-card" data-aos="fade-up">
+            <div class="experience-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/itpu-logo.png" alt="ITPU Logo">
+                            <img src="placeholder.svg" alt="ITPU Logo">
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
-                    <div class="experience-date">
-                        <i class="far fa-calendar-alt"></i> June 2023 - November 2024
-                    </div>
+                    <div class="experience-date">June 2023 - November 2024</div>
                     <div class="experience-role">Software Development</div>
                     <p class="experience-description">
                         Learned basic Java programming and web development fundamentals. The curriculum covered essential programming concepts, object-oriented design principles, and introductory web technologies to build a strong foundation in software development.
                     </p>
-                    <div class="experience-skills">
-                        <span>Java</span>
-                        <span>HTML/CSS</span>
-                        <span>JavaScript</span>
-                        <span>OOP</span>
-                    </div>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/itpu-building.jpeg" alt="ITPU building">
+                    <img src="placeholder.svg" alt="Samarkand City">
                 </div>
             </div>
 
             <!-- PROMAX LLC Card -->
-            <div class="experience-card promax-card" data-aos="fade-up">
+            <div class="experience-card" data-aos="fade-up">
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/promax-logo.jpg" alt="PROMAX LLC Logo">
+                            <img src="placeholder.svg" alt="PROMAX LLC Logo">
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
-                    <div class="experience-date">
-                        <i class="far fa-calendar-alt"></i> June 2022 - November 2023
-                    </div>
+                    <div class="experience-date">June 2022 - November 2023</div>
                     <div class="experience-role">Math, English</div>
                     <p class="experience-description">
                         Studied mathematics and English language skills. The program focused on developing strong analytical thinking through mathematics and effective communication skills through English language studies, providing a solid foundation for future technical education.
                     </p>
-                    <div class="experience-skills">
-                        <span>Mathematics</span>
-                        <span>English</span>
-                        <span>Analytical Thinking</span>
-                        <span>Communication</span>
-                    </div>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/promax-building.jpg" alt="PROMAX LLC building">
+                    <img src="placeholder.svg" alt="Bukhara City">
                 </div>
             </div>
-        </div>
-        <div class="section-title" data-aos="fade-up">
-            <h2>Work Experience</h2>
-            <p>Coming soon ...</p>
         </div>
     </div>
 </section>
@@ -131,9 +102,10 @@
 <div id="footer-container"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="/assets/js/scripts.js"></script>
-<script src="/assets/js/fragments/navbar.js"></script>
-<script src="/assets/js/fragments/footer.js"></script>
-<script src="/assets/js/study.js"></script>
+<script src="scripts.js"></script>
+<script src="study.js"></script>
+<script src="navbar.js"></script>
+<script src="footer.js"></script>
+<script src="/assets/js/loading-animation.js"></script>
 </body>
 </html>
