--- a/home/projects.html
+++ b/home/projects.html
@@ -7,17 +7,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
-    <link rel="stylesheet" href="/assets/css/fragments/footer.css">
-    <link rel="stylesheet" href="/assets/css/pages/projects.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body class="page-transition page-top">
 <!-- Loading Screen -->
 <div class="loading-screen">
-    <div class="loader">
-        <div class="loader-text">Loading...</div>
-    </div>
+    <!-- The loading-animation.js will populate this -->
 </div>
 
 <!-- Theme Toggle -->
@@ -25,8 +21,22 @@
     <i class="fas fa-moon"></i>
 </div>
 
-<!-- Include Navbar -->
-<div id="navbar-container"></div>
+<!-- Navbar -->
+<nav class="navbar">
+    <a href="index.html" class="logo">Suhrob Kalandarov</a>
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="skills.html">Skills</a>
+        <a href="experience.html">Experience</a>
+        <a href="projects.html" class="active">Projects</a>
+        <a href="profiles.html">Profiles</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <div class="mobile-menu-btn">
+        <i class="fas fa-bars"></i>
+    </div>
+</nav>
 
 <!-- Projects Section -->
 <section id="projects" class="projects page-content">
@@ -38,7 +48,7 @@
         <div class="projects-container">
             <div class="project-item" data-aos="fade-up" data-aos-delay="200">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Globus Project">
+                    <img src="placeholder.svg" alt="Globus Project">
                     <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
@@ -55,7 +65,7 @@
             </div>
             <div class="project-item" data-aos="fade-up" data-aos-delay="400">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Daily Task App">
+                    <img src="placeholder.svg" alt="Daily Task App">
                     <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
@@ -73,7 +83,7 @@
             </div>
             <div class="project-item" data-aos="fade-up" data-aos-delay="600">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Portfolio Creator">
+                    <img src="placeholder.svg" alt="Portfolio Creator">
                     <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
@@ -92,12 +102,32 @@
     </div>
 </section>
 
-<!-- Include Footer -->
-<div id="footer-container"></div>
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="placeholder.svg" alt="Logo">
+            </div>
+            <div class="footer-social">
+                <a href="mailto:suhrobqalandarov27@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="https://t.me/SuhrobKalandarov"><i class="fab fa-telegram"></i></a>
+                <a href="https://linkedin.com/in/suhrob-qalandarov-4a20b5293"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/suhrob-kalandarov"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="footer-text">
+                <p>Tashkent, Uzbekistan</p>
+            </div>
+            <div class="footer-divider"></div>
+            <div class="footer-copyright">
+                <p>&copy; 2025 Suhrob Kalandarov. All rights reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="/assets/js/scripts.js"></script>
-<script src="/assets/js/fragments/navbar.js"></script>
-<script src="/assets/js/fragments/footer.js"></script>
+<script src="scripts.js"></script>
+<script src="/assets/js/loading-animation.js"></script>
 </body>
 </html>
