Simplify comments and adjust spacing in about.html
Removed unnecessary comment wording and fixed spacing for consistency. These changes improve readability and maintain cleaner markup.

--- a/home/about.html
+++ b/home/about.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="/assets/css/fragments/footer.css">
   <link rel="stylesheet" href="/assets/css/pages/about.css">
 </head>
-<body class="page-transition page-right">
 
+<body class="page-transition page-right">
 <!-- Loading Screen -->
 <div class="loading-screen">
   <!-- The loading-animation.js will populate this -->
@@ -24,7 +24,7 @@
   <i class="fas fa-moon"></i>
 </div>
 
-<!-- Include Navbar -->
+<!-- Navbar -->
 <div id="navbar-container"></div>
 
 <!-- About Section -->
