Refactor about page structure and simplify dependencies.
Replaced external navbar and footer fragments with inline HTML components for better maintainability. Updated stylesheet and script links to align with the updated project structure and added a new loading animation feature. Removed redundant code in `scripts.js`.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
   <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
   <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+  <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body>
 <!-- Loading Screen -->
