--- a/home/experience.html
+++ b/home/experience.html
@@ -4,19 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience - Suhrob Kalandarov</title>
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Animation Library -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
+    <!-- Main Styles -->
     <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/study.css">
     <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
     <link rel="stylesheet" href="/assets/css/fragments/footer.css">
+    <link rel="stylesheet" href="/assets/css/study.css">
+    <!-- Loading Animation -->
     <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body class="page-transition page-bottom">
-<!-- Loading Screen -->
+<!-- Loading Animation -->
 <div class="loading-screen">
-    <!-- The loading-animation.js will populate this -->
+    <div class="hexagon-container"></div>
+    <div class="loader-wrapper">
+        <div class="loader">
+            <div class="cube">
+                <div class="cube-face"><div class="cube-inner"></div></div>
+                <div class="cube-face"><div class="cube-inner"></div></div>
+                <div class="cube-face"><div class="cube-inner"></div></div>
+                <div class="cube-face"><div class="cube-inner"></div></div>
+                <div class="cube-face"><div class="cube-inner"></div></div>
+                <div class="cube-face"><div class="cube-inner"></div></div>
+            </div>
+        </div>
+        <div class="page-name">Experience</div>
+        <div class="progress-container">
+            <div class="progress-bar"></div>
+        </div>
+        <div class="loading-text">LOADING</div>
+    </div>
 </div>
 
 <!-- Theme Toggle -->
@@ -40,7 +62,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="placeholder.svg" alt="PDP ACADEMY Logo">
+                            <img src="https://via.placeholder.com/80x80" alt="PDP ACADEMY Logo">
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
@@ -51,7 +73,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="placeholder.svg" alt="Tashkent City">
+                    <img src="https://via.placeholder.com/500x400" alt="Tashkent City">
                 </div>
             </div>
 
@@ -60,7 +82,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="placeholder.svg" alt="ITPU Logo">
+                            <img src="https://via.placeholder.com/80x80" alt="ITPU Logo">
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
@@ -71,7 +93,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="placeholder.svg" alt="Samarkand City">
+                    <img src="https://via.placeholder.com/500x400" alt="Samarkand City">
                 </div>
             </div>
 
@@ -80,7 +102,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="placeholder.svg" alt="PROMAX LLC Logo">
+                            <img src="https://via.placeholder.com/80x80" alt="PROMAX LLC Logo">
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
@@ -91,7 +113,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="placeholder.svg" alt="Bukhara City">
+                    <img src="https://via.placeholder.com/500x400" alt="Bukhara City">
                 </div>
             </div>
         </div>
@@ -101,6 +123,7 @@
 <!-- Include Footer -->
 <div id="footer-container"></div>
 
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script src="/assets/js/scripts.js"></script>
 <script src="/assets/js/study.js"></script>
